--- a/css/main.css
+++ b/css/main.css
@@ -442,3 +442,227 @@ a {
 .svg-three {
   background-color: #a73eed;
 }
+
+.feautured {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.feautured-title {
+  font-family: "Oswald";
+  line-height: 50px;
+  font-size: 40px;
+  font-weight: var(--regular);
+  text-align: center;
+  margin-bottom: 20px;
+}
+.feautured-text {
+  line-height: 24px;
+  color: var(--secondary-text-color);
+  text-align: center;
+  margin-bottom: 60px;
+  padding: 0% 283px;
+}
+.feautured-position {
+  font-size: 20px;
+  line-height: 23px;
+  margin-bottom: 16px;
+  font-weight: var(--regular);
+  letter-spacing: 0.8px;
+}
+.feautured-team {
+  margin-bottom: 44px;
+  font-weight: var(--regular);
+  line-height: 22px;
+  color: #4238af;
+}
+.feautured-salary {
+  font-size: var(--medium-size);
+  line-height: 23px;
+  margin-bottom: 14px;
+  position: relative;
+  padding-left: 25px;
+}
+.feautured-spot {
+  font-size: var(--medium-size);
+  line-height: 23px;
+  margin-bottom: 33px;
+  position: relative;
+  padding-left: 25px;
+}
+
+.feautured-salary::before {
+  background-image: url(../../images/svg/bag.svg);
+  content: "";
+  background-repeat: no-repeat;
+  background-position: 0 center;
+  background-size: contain;
+  width: 16px;
+  height: 18px;
+  position: absolute;
+  top: 2px;
+  left: 0;
+}
+
+.feautured-spot::before {
+  background-image: url(../../images/svg/mark.svg);
+  content: "";
+  background-repeat: no-repeat;
+  background-position: 0 center;
+  background-size: contain;
+  width: 16px;
+  height: 18px;
+  position: absolute;
+  top: 2px;
+  left: 0;
+}
+
+.monthly {
+  color: var(--secondary-text-color);
+  margin-left: 4px;
+  text-align: left;
+}
+
+.map {
+  color: var(--secondary-text-color);
+  margin-left: 17px;
+  text-align: left;
+}
+
+.feautured-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 75px;
+}
+
+.feautured-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40px 50px;
+  width: 340px;
+  height: 465px;
+  border-radius: 20px;
+  -webkit-box-shadow: -1px 1px 20px rgba(0, 0, 0, 0.3);
+          box-shadow: -1px 1px 20px rgba(0, 0, 0, 0.3);
+  -webkit-transition: background-color 0.3s ease, color 0.3s ease, -webkit-transform 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease, -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease, -webkit-transform 0.3s ease;
+}
+.feautured-item:hover {
+  -webkit-transform: translateY(-15px);
+          transform: translateY(-15px);
+  background-color: #f9faff;
+}
+
+.feautured-employers {
+  margin-bottom: 40px;
+}
+
+.feautured-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.feautured-buttons-like {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  background-color: #f9faff;
+  cursor: pointer;
+  -webkit-transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+.feautured-buttons-like svg {
+  fill: #ff5c00;
+  -webkit-transition: fill 0.3s ease, color 0.3s ease;
+  transition: fill 0.3s ease, color 0.3s ease;
+}
+
+.feautured-buttons-like:hover {
+  background-color: #ff5c00;
+}
+.feautured-buttons-like:hover svg {
+  fill: white;
+}
+
+.feautured-buttons-apply {
+  background-color: rgba(56, 49, 139, 0.3);
+  color: #38318b;
+  width: 140px;
+  height: 45px;
+  border-radius: 47px;
+  border: 0;
+  font-family: "Open Sans";
+  font-size: var(--medium-size);
+  cursor: pointer;
+  -webkit-transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.feautured-view {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.feautured-buttons-apply:hover {
+  color: white;
+  background-color: #544cac;
+}
+
+.feautured-buttons-view {
+  color: white;
+  background-color: #544cac;
+  width: 140px;
+  height: 45px;
+  border-radius: 47px;
+  border: 0;
+  font-family: "Open Sans";
+  font-size: var(--medium-size);
+  cursor: pointer;
+  -webkit-transition: background-color 0.3s ease, color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.feautured-buttons-view:hover {
+  background-color: rgba(56, 49, 139, 0.3);
+  color: #38318b;
+}
