--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,3 +8,6 @@
 @import "./layout/how-works";
 @import "./layout/why";
 @import "./layout/feautured";
+@import "./layout/customers";
+@import "./layout/pricing";
+@import "./layout/footer";
