--- a/scss/layout/_feautured.scss
+++ b/scss/layout/_feautured.scss
@@ -14,7 +14,6 @@
     line-height: 24px;
     color: var(--secondary-text-color);
     text-align: center;
-    margin-bottom: 60px;
     padding: 0% 283px;
   }
   &-position {
@@ -43,6 +42,9 @@
     margin-bottom: 33px;
     position: relative;
     padding-left: 25px;
+  }
+  &-container {
+    margin-bottom: 80px;
   }
 }
 .feautured-salary::before {
