--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -26,15 +26,42 @@
 }
 .nav__link {
   color: var(--text-color);
+  cursor: pointer;
 }
 .search-container {
   margin-left: 67px;
   width: 307px;
   height: 35px;
+  border-radius: 50px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  padding-left: 19px;
+  padding-right: 7px;
+  input {
+    height: 100%;
+    width: 90%;
+    border: 0;
+    outline: none;
+    background-color: transparent;
+  }
+}
+.search-box {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
 }
 .auth {
   display: inline-flex;
   text-align: center;
   align-items: center;
   margin-left: 26px;
+  div {
+    margin: 0 4px;
+  }
 }
