--- a/scss/layout/_why.scss
+++ b/scss/layout/_why.scss
@@ -13,8 +13,10 @@
     line-height: 24px;
     color: var(--secondary-text-color);
     text-align: center;
-    margin-bottom: 60px;
     padding: 0% 283px;
+  }
+  &-container {
+    margin-bottom: 60px;
   }
 }
 
