--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -24,6 +24,13 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
   // outline: 1px solid tomato;
-  width: 1110px;
+
+  @media screen and (min-width: 480px) {
+    padding: 0;
+    width: 1110px;
+  }
 }
