--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,15 +2,25 @@
   padding-top: 110px;
   background-color: #dbe2ff;
   border-radius: 30px 30px 0 0;
+  @media screen and (max-width: 480px) {
+    padding-top: 55px;
+  }
 }
 .footer-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 98px;
+
+  @media screen and (max-width: 480px) {
+    margin-bottom: 48px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 колонки з рівною шириною */
+    gap: 30px 20px; /* Відступ між картинками */
+  }
 }
 .footer-item {
-  text-align-last: left;
+  text-align: left;
   h3 {
     font-family: "Oswald";
     font-weight: var(--regular);
@@ -25,12 +35,30 @@
       margin-bottom: 20px;
     }
   }
+  @media screen and (max-width: 480px) {
+    text-align: center;
+    h3 {
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 15px;
+      &:not(:last-of-type) {
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
 .footer-container {
   display: flex;
   justify-content: space-between;
   border-top: 3px solid #625bae;
   padding: 17px 0 17px 0;
+  @media screen and (max-width: 480px) {
+    justify-content: space-around;
+    .footer-container-img {
+      display: none;
+    }
+  }
 }
 
 .footer-faq {
@@ -41,11 +69,18 @@
   gap: 70px;
   font-weight: var(--semi-bold-weight);
   font-size: var(--small-size);
+  @media screen and (max-width: 480px) {
+    gap: 10px;
+    flex-direction: column;
+  }
 }
 .footer-svg-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  @media screen and (max-width: 480px) {
+    justify-content: center;
+  }
 }
 .footer-svg-item {
   display: flex;
