--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -3,12 +3,28 @@
 }
 .header-container {
   display: flex;
-  align-items: center;
-  padding: 23px 0;
+  justify-content: space-between;
+  padding-top: 15px;
+
+  @media screen and (min-width: 480px) {
+    padding: 23px 0;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+.burger {
+  @media screen and (min-width: 480px) {
+    cursor: pointer;
+    display: none;
+  }
 }
 .nav {
-  display: flex;
-  margin-left: 56px;
+  display: none;
+
+  @media screen and (min-width: 480px) {
+    display: flex;
+    margin-left: 56px;
+  }
 }
 .nav__list {
   display: flex;
