--- a/scss/layout/_how-works.scss
+++ b/scss/layout/_how-works.scss
@@ -13,7 +13,8 @@
 }
 
 .works__box {
-  width: 435px;
+  width: 100%;
+
   .works__title {
     font-family: "Oswald";
     color: var(--text-dark);
@@ -22,13 +23,16 @@
     margin-top: 19px;
     margin-bottom: 43px;
   }
+  @media screen and (min-width: 480px) {
+    width: 435px;
+  }
 }
+
 .works__item {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 435px;
-  height: 58px;
+  width: 100%;
   padding: 21px 21px 20px 24px;
   border-radius: 5px;
   background-color: var(--secondary-color);
@@ -56,7 +60,6 @@
   }
 }
 .open {
-  height: 134px;
   flex-direction: column;
   &-text {
     padding-left: 45px;
@@ -84,11 +87,16 @@
   background-color: #ffdecc;
 }
 .works__img {
-  width: 635px;
-  height: 433px;
-  border-radius: 10px;
-  img {
-    width: 100%;
-    height: 100%;
+  display: none;
+
+  @media screen and (min-width: 480px) {
+    display: block;
+    width: 635px;
+    height: 433px;
+    border-radius: 10px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
