--- a/scss/layout/_partners.scss
+++ b/scss/layout/_partners.scss
@@ -1,11 +1,28 @@
 .partners {
-  padding-top: 32px;
+  padding-top: 16px;
   padding-bottom: 33px;
 }
 .partners__container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @media screen and (max-width: 480px) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 колонки з рівною шириною */
+    gap: 20px; /* Відступ між картинками */
+    li {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    img {
+      margin: 0;
+    }
+  }
+
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .partners__img1 {
   margin-right: 102px;
